完善修改权限路径
